--- a/index.html
+++ b/index.html
@@ -4,16 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>титл</title>
+    <title>Well-being Oggetto</title>
     <link rel = "stylesheet" href="style.css">
 </head>
-<body>
-
-    <h1 id="NUM"></h1>
-    <button id = "b1">decrease</button>
-    <button id = "b2">reset</button>
-    <button id = "b3">increase</button>
+<body>   
+    
+<div id = "hea">
+    <header>
+        <h2>Well-being Oggetto</h2>
+        <button>Munu</button>
+        <button>Account</button>
+    </header>
     <script src = "index.js"></script>
+</div> 
+<h1>Платформа для<br> вашего благополучия</h1> 
 
 </body>
 </html>
+
+
+
