--- a/index.html
+++ b/index.html
@@ -2,24 +2,140 @@
 <html lang="en" style = "line-height: 0;-webkit-text-size-adjust: 100%;"></html>
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital;" rel="stylesheet">
-        <title>Ogetto.exe</title>
+    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital" rel="stylesheet">
+
+    <title>Ogetto.exe</title>
     </head>
     <body>
     <div class="item-KnMenu"><img src="KnMenu.png"></div>
     <div class="item-KnAkk"><img src="KnAkk.svg"></div>
     <div class="form">
         <div class="form-text">
-            <p><div style=" text-shadow: 1px 1px 2px black; width: 440px;height: 0px;color: black;font-size: 40px;font-family: Montserrat;font-style: italic;font-weight: 500;word-wrap: break-word">Well-being  Odjeto</div></p>
-            <p><div style="font-size: 1650px; opacity: 0;">W</div></p>
+            <p><div style=" text-shadow: 1px 1px 2px black; width: 440px;height: 0px;color: black;font-size: 40px;font-family: Montserrat;font-style: italic;font-weight: 500;word-wrap: break-word;">Курсы</div></p>
         </div>
-        <div class="item-image"><img src="Logo.svg"></div>
-        
+        <div class="item-image1"><img src="Logo.svg"></div>
     </div>
-    <h1><div style="font-family: Montserrat; text-shadow: 0px 3px 10px black; width: 1120px; color: white; font-size: 80px; font-weight: 400; line-height: 121.99px; word-wrap: break-word;">Платформа для<br> вашего благополучия</div></h1> 
+        <div class="items">
+            <div class="row">
+                <div class="item">
+                    <div class="item-image"><img src="Buffer.jpg">
+                        <div class="overlay-actions">
+                            <div class="actions">
+                            <a href="#"><i class="fa-solid fa-eye"></i> Посмотреть курс</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item-text">
+                        <h3>Название</h3>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item-image"><img src="Buffer.jpg">
+                        <div class="overlay-actions">
+                            <div class="actions">
+                            <a href="#"><i class="fa-solid fa-eye"></i> Посмотреть курс</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item-text">
+                        <h3>Название</h3>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item-image"><img src="Buffer.jpg">
+                        <div class="overlay-actions">
+                            <div class="actions">
+                            <a href="#"><i class="fa-solid fa-eye"></i> Посмотреть курс</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item-text">
+                        <h3>Название</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="item">
+                    <div class="item-image"><img src="Buffer.jpg">
+                        <div class="overlay-actions">
+                            <div class="actions">
+                            <a href="#"><i class="fa-solid fa-eye"></i> Посмотреть курс</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item-text">
+                        <h3>Название</h3>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item-image"><img src="Buffer.jpg">
+                        <div class="overlay-actions">
+                            <div class="actions">
+                            <a href="#"><i class="fa-solid fa-eye"></i> Посмотреть курс</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item-text">
+                        <h3>Название</h3>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item-image"><img src="Buffer.jpg">
+                        <div class="overlay-actions">
+                            <div class="actions">
+                            <a href="#"><i class="fa-solid fa-eye"></i> Посмотреть курс</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item-text">
+                        <h3>Название</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="item">
+                    <div class="item-image"><img src="Buffer.jpg">
+                        <div class="overlay-actions">
+                            <div class="actions">
+                            <a href="#"><i class="fa-solid fa-eye"></i> Посмотреть курс</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item-text">
+                        <h3>Название</h3>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item-image"><img src="Buffer.jpg">
+                        <div class="overlay-actions">
+                            <div class="actions">
+                            <a href="#"><i class="fa-solid fa-eye"></i> Посмотреть курс</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item-text">
+                        <h3>Название</h3>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item-image"><img src="Buffer.jpg">
+                        <div class="overlay-actions">
+                            <div class="actions">
+                            <a href="#"><i class="fa-solid fa-eye"></i> Посмотреть курс</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item-text">
+                        <h3>Название</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="js/main.js"></script>
