--- a/проект — копия/index.html
+++ b/проект — копия/index.html
@@ -5,6 +5,9 @@
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,300&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital;" rel="stylesheet">
         <title>Ogetto.exe</title>
     </head>
@@ -13,13 +16,15 @@
     <div class="item-KnAkk"><img src="KnAkk.svg"></div>
     <div class="form">
         <div class="form-text">
-            <p><div style=" text-shadow: 1px 1px 2px black; width: 440px;height: 0px;color: black;font-size: 40px;font-family: Montserrat;font-style: italic;font-weight: 500;word-wrap: break-word;">Well-being</div></p>
-            <p><div style="font-size: 1650px; opacity: 0;">W</div></p>
+            <p><div style=" text-shadow: 1px 1px 2px black; width: 440px;height: 0px;color: black;font-size: 40px;font-family: Montserrat;font-style: italic;font-weight: 500;word-wrap: break-word;">Well-being</div></a></p>
         </div>
         <div class="item-image"><img src="Logo.svg"></div>
-        
     </div>
-    <h1><div style="font-family: Montserrat; text-shadow: 0px 3px 10px black; width: 1120px; color: white; font-size: 80px; font-weight: 400; line-height: 121.99px; word-wrap: break-word; position: absolute; right: 20%">Платформа для<br> вашего благополучия</div></h1> 
+    <div style="position:absolute;right: 180px; z-index: 400;"><img src="Call.png"></div>
+    <div style="position:absolute;right: 0; width: 260px; height: 1024px; background: #ffffff; z-index: 300;"></div>
+    <h1><div style="font-family: 'Montserrat', sans-serif; text-shadow: 0px 3px 10px black; width: 1120px; color: white; font-size: 80px; font-weight: 400; line-height: 121.99px; word-wrap: break-word; position: absolute; right: 20%">Платформа для<br> вашего благополучия</div></h1>
+    <a href="#" style="text-decoration:none; position:absolute; right: 2%; font-size: 30px; top: 60%; z-index: 400;">Специалисты</a>
+    <a href="#" style="text-decoration:none; position:absolute; right: 6%; font-size: 30px; top: 50%; z-index: 400;">Lifestyle</a>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="js/main.js"></script>
